# my-olx

./: .gitignore  CLAUDE.md  README.MD  README.md
backend/: .env.example  Cargo.toml  README.md
backend/migrations/: 01_seed_favorites.sql  20260423120000_init_extensions.sql  20260423120100_users.sql  20260423120200_email_verification.sql  20260423120300_password_reset.sql  20260423120400_phone_verification.sql  20260423120500_listings.sql  20260423120600_listing_images.sql  20260423120700_listings_search.sql  20260423120800_favorites.sql  20260423120900_conversations_messages.sql  20260423193800_initial_schema.sql  20260423230500_favorites_and_listing_support.sql  20260423235500_listing_images_metadata.sql  20260427200252_create_messaging_tables.sql  20260428010000_seed_data.sql  20260429010000_seed_locations.sql
backend/src/: config.rs  error.rs  main.rs  router.rs  state.rs
backend/src/data/: cities-by-counties.json
backend/src/dto/: auth.rs  image.rs  listing.rs  messaging.rs  mod.rs  user.rs
backend/src/handlers/: auth.rs  favorites.rs  images.rs  listings.rs  locations.rs  messaging.rs  mod.rs  users.rs
backend/src/middleware/: auth.rs
backend/src/models/: listing.rs  location.rs  mod.rs  user.rs
backend/src/repositories/: conversations.rs  email_tokens.rs  favorites.rs  images.rs  listings.rs  locations.rs  messages.rs  mod.rs  password_tokens.rs  phone_tokens.rs  users.rs
backend/src/routes/: auth.rs  favorites.rs  images.rs  listings.rs  locations.rs  me.rs  messaging.rs  mod.rs  openapi.rs  users.rs
backend/src/services/: auth.rs  email.rs  favorites.rs  images.rs  (+6 more)
backend/tests/: migrations_apply.rs
(+245 files in other folders)
