[package]
name = "my-olx-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum          = { version = "0.7", features = ["multipart", "ws"] }
tokio         = { version = "1", features = ["full"] }
tower         = { version = "0.4", features = ["full"] }
tower-http    = { version = "0.5", features = ["cors", "trace", "compression-br"] }

sqlx          = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate"] }
redis         = { version = "0.25", features = ["tokio-comp"] }

serde         = { version = "1", features = ["derive"] }
serde_json    = "1"

jsonwebtoken  = "9"
argon2        = "0.5"

dotenvy       = "0.15"
config        = "0.14"

uuid          = { version = "1", features = ["v4", "serde"] }
chrono        = { version = "0.4", features = ["serde"] }
validator     = { version = "0.18", features = ["derive"] }

thiserror     = "1"
anyhow        = "1"

tracing              = "0.1"
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

aws-sdk-s3    = "1"
aws-config    = "1"

async-trait   = "0.1"

axum-extra    = { version = "0.9", features = ["typed-header"] }
headers       = "0.4"
lettre        = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1-rustls-tls"] }
rand          = "0.8"
base64        = "0.22"
lazy_static   = "1.5.0"
regex         = "1.12.3"
sha2          = "0.10"
hex           = "0.4"
once_cell     = "1.19"

[dev-dependencies]
tokio         = { version = "1", features = ["full", "test-util"] }
